fix overflow/scrolling bug

--- a/src/css/farmbot.scss
+++ b/src/css/farmbot.scss
@@ -2,10 +2,6 @@
 
 @import 'colors';
 
-::-webkit-scrollbar {
-    display: none;
-}
-
 .all-content-wrapper {
   padding: 3rem 3rem 0rem 3rem;
   margin-left: auto;
